--- a/1-tensor-basics/pytorch-intro.ipynb
+++ b/1-tensor-basics/pytorch-intro.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f6420760",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sb"
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "4b39d2c0-204e-45e4-9f37-069386262495",
    "metadata": {},
    "outputs": [
@@ -27,16 +20,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.7.0+cu128\n"
+      "7\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "scaler = torch.tensor(7) \n",
+    "print(scaler.item())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -50,7 +46,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
