--- a/1-tensor-basics/1.1-what-are-tensors.ipynb
+++ b/1-tensor-basics/1.1-what-are-tensors.ipynb
@@ -19,14 +19,16 @@
     "\n",
     "You already know about vectors right? Vectors are actually a part of a more general collection of objects called Tensors. Vector is just one specific case of tensors. In fact, they are tensors of rank 1. Because a vector [1,2,3] is a single list or one dimensional\n",
     "\n",
-    "similarly, matrices [[1,2,3],[4,5,6]] are tensors of rank because matrices are two dimensional or to be precise each component say 2 is represented by x and y\n",
+    "similarly, matrices [[1,2,3],[4,5,6]] are tensors of rank because matrices are two dimensional or to be precise each component say 2 is represented by x and y. Or think of it this way, the matrix example here can be represented as ```1*2*3``` (```breadth*length*height```) because of its shape -> it has two non-one dimensions!\n",
+    "\n",
+    "![alt text](https://miro.medium.com/v2/resize:fit:931/1*zuwlMgdyhzFicx2v6UpLIw.jpeg)\n",
     "\n",
     "In a broader sense, tensors are just numerical encodings of inputs to a deep neural network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4b39d2c0-204e-45e4-9f37-069386262495",
    "metadata": {},
    "outputs": [
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "30bfc6ec",
    "metadata": {},
    "outputs": [
@@ -69,12 +71,12 @@
     "vector = torch.tensor([1,2,3])\n",
     "print(vector.tolist())\n",
     "print(vector.size())\n",
-    "print(vector.ndim)\n"
+    "print(vector.ndimension())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "14142c70",
    "metadata": {},
    "outputs": [
@@ -93,7 +95,15 @@
     "matrix = torch.tensor([[1,2,3],[7,4,6],[7,8,9]])\n",
     "print(matrix.tolist())\n",
     "print(matrix.size())\n",
-    "print(matrix.ndim)"
+    "print(matrix.ndimension())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67204c72",
+   "metadata": {},
+   "source": [
+    "> Note: Scalers and vectors are lowercase and MATRIX and TENSORS should be in lowercase"
    ]
   }
  ],
