learnt tensor operations

--- a/1-tensor-basics/1.3-tensor-datatypes.ipynb
+++ b/1-tensor-basics/1.3-tensor-datatypes.ipynb
@@ -31,10 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0692b809",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float16\n",
+      "cpu\n",
+      "torch.Size([2, 3, 3])\n",
+      "torch.Size([2, 3, 3])\n"
+     ]
+    }
+   ],
    "source": [
     "float_16_tensor = torch.zeros(2, 3, 3, dtype=torch.float16, device=\"cpu\", requires_grad=False)\n",
     "# dtype: data type of our tensor\n",
@@ -42,8 +53,33 @@
     "# requires_grad: whether or not to track gradients with operations on this tensor?\n",
     "\n",
     "# convert data type\n",
-    "float_32_tensor = float_16_tensor.to(torch.float32)"
+    "float_32_tensor = float_16_tensor.to(torch.float32)\n",
+    "\n",
+    "# getting information about my tensor\n",
+    "print(float_16_tensor.dtype)\n",
+    "print(float_16_tensor.device)\n",
+    "print(float_16_tensor.shape) # attribute\n",
+    "print(float_16_tensor.size()) # method"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41c90440",
+   "metadata": {},
+   "source": [
+    "To get:\n",
+    "1. Tensor datatype: `your_tensor_name.dtype`\n",
+    "2. Tensor device: `your_tensor_name.device`\n",
+    "3. Tensor shape: `your_tensor_name.size()` or `your_tensor_name.shape`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7015c1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
