learnt tensor aggregator functions

--- a/1-tensor-basics/1.1-what-are-tensors.ipynb
+++ b/1-tensor-basics/1.1-what-are-tensors.ipynb
@@ -19,11 +19,13 @@
     "\n",
     "You already know about vectors right? Vectors are actually a part of a more general collection of objects called Tensors. Vector is just one specific case of tensors. In fact, they are tensors of rank 1. Because a vector [1,2,3] is a single list or one dimensional\n",
     "\n",
-    "similarly, matrices [[1,2,3],[4,5,6]] are tensors of rank because matrices are two dimensional or to be precise each component say 2 is represented by x and y. Or think of it this way, the matrix example here can be represented as ```1*2*3``` (```breadth*length*height```) because of its shape -> it has two non-one dimensions!\n",
+    "Similarly, matrices [[1,2,3],[4,5,6]] are tensors of rank 2 because matrices are two dimensional or to be precise each component say 2 is represented by x and y. Or think of it this way, the matrix example here can be represented as ```1*2*3``` (```breadth*length*height```) because of its shape -> it has two non-one dimensions!\n",
     "\n",
     "![alt text](https://miro.medium.com/v2/resize:fit:931/1*zuwlMgdyhzFicx2v6UpLIw.jpeg)\n",
     "\n",
-    "In a broader sense, tensors are just numerical encodings of inputs to a deep neural network"
+    "In a broader sense, tensors are just numerical encodings of inputs to a deep neural network. \n",
+    "\n",
+    "[For better understanding about tensors](https://www.youtube.com/watch?v=f5liqUk0ZTw&pp=ygURd2hhdCBpcyAgYSB0ZW5zb3I%3D)"
    ]
   },
   {
