--- a/1-tensor-basics/1.4-tensor-operations.ipynb
+++ b/1-tensor-basics/1.4-tensor-operations.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7bc7b584",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,51 @@
     "print(f\"tensor1 is: {tensor1}\")\n",
     "tensor2 = torch.rand(2,4,3) \n",
     "print(f\"tensor2 is {tensor2}\")\n",
+    "# even torch.mm(t1, t2) works -> short for torch.matmul()\n",
     "print(f\"matrix multiplication of tensor1 and tensor2 is {torch.matmul(tensor1,tensor2)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ac217945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.9625, 0.9139, 0.1755, 0.9461],\n",
+      "         [0.5411, 0.7292, 0.7929, 0.2978],\n",
+      "         [0.9263, 0.4485, 0.0297, 0.3003]]])\n",
+      "torch.Size([1, 3, 4])\n",
+      "tensor([[[0.9625],\n",
+      "         [0.5411],\n",
+      "         [0.9263]],\n",
+      "\n",
+      "        [[0.9139],\n",
+      "         [0.7292],\n",
+      "         [0.4485]],\n",
+      "\n",
+      "        [[0.1755],\n",
+      "         [0.7929],\n",
+      "         [0.0297]],\n",
+      "\n",
+      "        [[0.9461],\n",
+      "         [0.2978],\n",
+      "         [0.3003]]])\n",
+      "torch.Size([4, 3, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transposing tensors (to sometimes fix shape errors when doing matmul)\n",
+    "tensor1 = torch.rand(1,3,4)\n",
+    "print(tensor1)\n",
+    "print(tensor1.shape)\n",
+    "tensor1_t = tensor1.T \n",
+    "print(tensor1_t)\n",
+    "print(tensor1.T.shape)"
    ]
   }
  ],
