made some changes in random tensors notebook

--- a/1-tensor-basics/1.2-random-tensors.ipynb
+++ b/1-tensor-basics/1.2-random-tensors.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# Random Tensors\n",
     "\n",
-    "random tensors are important because many a times, inputs like images are numerically encoded into tensors with random numbers. For example, an image of pixel size `224*224` is broken down into 3 images of `224*224*224`, with each of the three images being completely in red, green or blue, which will be represented by a tensor of size `(3*224*224)` -> this is a three dimensional tensor with rank 3\n",
+    "Random tensors are important because many a times, inputs like images are numerically encoded into tensors with random numbers. For example, an image of pixel size `224*224` is broken down into 3 images of `224*224*224`, with each of the three images being red, green and blue, which will be represented by a tensor of size `(3*224*224)` -> this is a three dimensional tensor (with rank 3)\n",
     "\n",
     "![Alt text](https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/main/images/00-tensor-shape-example-of-image.png)"
    ]
