made changes in the description of tensors

--- a/1-tensor-basics/1.1-what-are-tensors.ipynb
+++ b/1-tensor-basics/1.1-what-are-tensors.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# What are tensors?\n",
     "\n",
-    "You already know about vectors right? Vectors are actually a part of a more general collection of objects called Tensors. Vector is just one specific case of tensors. In fact, they are tensors of rank 1. Because a vector [1,2,3] is a single list or one dimensional\n",
+    "Assuming you already know about vectors, they are actually a part of a more general collection of objects called Tensors. Tensors are multi-dimensional arrays that generalize scalar, vector, matrix representations and more! A Vector is just one specific use case of tensors. In fact, they are tensors of rank 1 because a vector [1,2,3] is a single list or one dimensional\n",
     "\n",
     "Similarly, matrices [[1,2,3],[4,5,6]] are tensors of rank 2 because matrices are two dimensional or to be precise each component say 2 is represented by x and y. Or think of it this way, the matrix example here can be represented as ```1*2*3``` (```breadth*length*height```) because of its shape -> it has two non-one dimensions!\n",
     "\n",
