added ways to change the shape of a tensor

--- a/1-tensor-basics/1.1-what-are-tensors.ipynb
+++ b/1-tensor-basics/1.1-what-are-tensors.ipynb
@@ -15,7 +15,7 @@
    "id": "22462ebe",
    "metadata": {},
    "source": [
-    "# What are tensors?\n",
+    "### What are tensors?\n",
     "\n",
     "Assuming you already know about vectors, they are actually a part of a more general collection of objects called Tensors. Tensors are multi-dimensional arrays that generalize scalar, vector, matrix representations and more! A Vector is just one specific use case of tensors. In fact, they are tensors of rank 1 because a vector [1,2,3] is a single list or one dimensional\n",
     "\n",
