--- a/1-tensor-basics/1.3-tensor-datatypes.ipynb
+++ b/1-tensor-basics/1.3-tensor-datatypes.ipynb
@@ -15,7 +15,7 @@
    "id": "1c3aa94c",
    "metadata": {},
    "source": [
-    "# Tensor Data-types and Important Parameters when creating them\n",
+    "### Tensor Data-types and Important Parameters when creating them\n",
     "\n",
     "There are three main issues in deep learning computation:\n",
     "\n",
