--- a/1-tensor-basics/1.4-tensor-operations.ipynb
+++ b/1-tensor-basics/1.4-tensor-operations.ipynb
@@ -104,8 +104,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b38875c2",
+   "metadata": {},
+   "source": [
+    "### Tensor Multiplication rules\n",
+    "![alt text](https://jillwilliams.github.io/Multiplying-Matrices/images/img11.png)\n",
+    "However, note that matrix multiplication rules is followed only for two dimensions of the two tensors being multiplied, the **third** dimension must be the same for both!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7bc7b584",
    "metadata": {},
    "outputs": [
@@ -113,38 +123,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor1 is: tensor([[[0.4844, 0.8891, 0.3319, 0.9856],\n",
-      "         [0.8840, 0.5021, 0.1541, 0.5338],\n",
-      "         [0.6865, 0.3639, 0.7501, 0.8854]],\n",
+      "torch.Size([2, 3, 4])\n",
+      "tensor1 is: tensor([[[0.7364, 0.0082, 0.9002, 0.3251],\n",
+      "         [0.2964, 0.5255, 0.8038, 0.3441],\n",
+      "         [0.2133, 0.3947, 0.7764, 0.5862]],\n",
       "\n",
-      "        [[0.4915, 0.9829, 0.1222, 0.4988],\n",
-      "         [0.3346, 0.4257, 0.2743, 0.9018],\n",
-      "         [0.7376, 0.2480, 0.5188, 0.1159]]])\n",
-      "tensor2 is tensor([[[0.3971, 0.0545, 0.4270],\n",
-      "         [0.3958, 0.4558, 0.8766],\n",
-      "         [0.0379, 0.5960, 0.7923],\n",
-      "         [0.5467, 0.0489, 0.1150]],\n",
+      "        [[0.6698, 0.0332, 0.3255, 0.1313],\n",
+      "         [0.0241, 0.0913, 0.0993, 0.0362],\n",
+      "         [0.5472, 0.0470, 0.5730, 0.3705]]])\n",
+      "tensor2 is tensor([[[0.6220, 0.0306, 0.3837],\n",
+      "         [0.7372, 0.0104, 0.2958],\n",
+      "         [0.1611, 0.0954, 0.9617],\n",
+      "         [0.4439, 0.2295, 0.4875]],\n",
       "\n",
-      "        [[0.7763, 0.3516, 0.6733],\n",
-      "         [0.9816, 0.7946, 0.8355],\n",
-      "         [0.3202, 0.0931, 0.4687],\n",
-      "         [0.6882, 0.4662, 0.1412]]])\n",
-      "matrix multiplication of tensor1 and tensor2 is tensor([[[1.0957, 0.6776, 1.3624],\n",
-      "         [0.8475, 0.3950, 1.0011],\n",
-      "         [0.9291, 0.6936, 1.3082]],\n",
+      "        [[0.4716, 0.1344, 0.7218],\n",
+      "         [0.2895, 0.3803, 0.8245],\n",
+      "         [0.0865, 0.0788, 0.6868],\n",
+      "         [0.9416, 0.5481, 0.6667]],\n",
       "\n",
-      "        [[1.7287, 1.1977, 1.2798],\n",
-      "         [1.3861, 0.9019, 0.8369],\n",
-      "         [1.0619, 0.5587, 0.9633]]])\n"
+      "        [[0.9138, 0.8403, 0.6745],\n",
+      "         [0.7715, 0.7924, 0.1728],\n",
+      "         [0.3390, 0.0304, 0.7020],\n",
+      "         [0.5997, 0.5452, 0.7392]]])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (2) must match the size of tensor b (3) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mtensor2 is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtensor2\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# even torch.mm(t1, t2) works -> short for torch.matmul()\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mmatrix multiplication of tensor1 and tensor2 is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmatmul\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtensor1\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtensor2\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mRuntimeError\u001b[39m: The size of tensor a (2) must match the size of tensor b (3) at non-singleton dimension 0"
      ]
     }
    ],
    "source": [
     "# tensor multiplication follows the standard matrix multiplication rules\n",
     "# notice carefully the dimensions of tensor1 and tensor2 and the result\n",
+    "# also note that the first dimension in both tensors are same, tensors must also be of the same size\n",
     "tensor1 = torch.rand(2,3,4) \n",
     "print(f\"tensor1 is: {tensor1}\")\n",
-    "tensor2 = torch.rand(2,4,3) \n",
+    "tensor2 = torch.rand(3,4,3) \n",
     "print(f\"tensor2 is {tensor2}\")\n",
     "# even torch.mm(t1, t2) works -> short for torch.matmul()\n",
     "print(f\"matrix multiplication of tensor1 and tensor2 is {torch.matmul(tensor1,tensor2)}\")\n"
