--- a/1-tensor-basics/1.2-random-tensors.ipynb
+++ b/1-tensor-basics/1.2-random-tensors.ipynb
@@ -15,7 +15,7 @@
    "id": "3c354677",
    "metadata": {},
    "source": [
-    "# Random Tensors\n",
+    "### Random Tensors\n",
     "\n",
     "Random tensors are important because many a times, inputs like images are numerically encoded into tensors with random numbers. For example, an image of pixel size `224*224` is broken down into 3 images of `224*224*224`, with each of the three images being red, green and blue, which will be represented by a tensor of size `(3*224*224)` -> this is a three dimensional tensor (with rank 3)\n",
     "\n",
