emphasized the term "order of dimensions" in the tensor permuting section

--- a/1-tensor-basics/1.5-ways-to-change-shape.ipynb
+++ b/1-tensor-basics/1.5-ways-to-change-shape.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "### Permuting a Tensor\n",
     "\n",
-    "Changes the order of dimensions of a tensor. Again, the new tensor returned shares the same memory space as the original tensor"
+    "Changes the **order of dimensions** of a tensor. Again, the new tensor returned shares the same memory space as the original tensor"
    ]
   },
   {
