Add data preparation and loading notebook for PyTorch workflow
- Created a Jupyter notebook (2.1-prep-and-load-data.ipynb) for data preparation and loading in a PyTorch workflow.
- Implemented data generation using a linear regression formula with specified weight and bias.
- Visualized the generated data using Seaborn for better understanding.
- Explained the importance of splitting data into training, validation, and test sets.
- Included code for splitting the dataset into training and test sets.

--- a/1-tensor-basics/1.7-reproducibility.ipynb
+++ b/1-tensor-basics/1.7-reproducibility.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "36007961",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
     "\n",
     "# torch.rand() takes a generator function that sets the seed for the program\n",
     "x = torch.rand(1,3,3, generator=torch.manual_seed(SEED))\n",
-    "# everytime you run this cell, you'll get the same tensor generator even though we're using rand() to\n",
+    "# every time you run this cell, you'll get the same tensor even though we're using rand() to\n",
     "# generate our tensor\n",
     "print(x)"
    ]
